--- a/web/src/components/ModelInterface.css
+++ b/web/src/components/ModelInterface.css
@@ -219,3 +219,9 @@
   height: 1.25rem;
   cursor: pointer;
 }
+
+.multimodal-checkbox {
+  width: 1.25rem;
+  height: 1.25rem;
+  cursor: pointer;
+}
